--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/HoneyMeta/ccfingerprint.git"
+    "url": "git+https://github.com/HoneyMeta/ccfingerprint.git"
   },
   "homepage": "https://github.com/HoneyMeta/ccfingerprint",
   "bugs": {
